# regos-2000

./: .gitignore  .gitmodules  Makefile  README.md  Vagrantfile  error.txt  out.txt  report.txt
.vagrant/bundler/: global.sol
apps/: app.S  app.lds
apps/system/: sys_file.c
earth/: bus_uart.c  cpu_intr.c  dev_tty.c  queue.c  queue.h
grass/: grass.c  scheduler.c  syscall.c  syscall.h
rust/: notes.md  tools.md
rust-fs/: README.md  fedora36_setup_0.sh  fedora36_setup_2.sh  notes.md  setup_1.sh  ubuntu14_setup_0.sh  ubuntu14_setup_2.sh
rusty_c/: README.md  c2rust.sh  clang.sh  exports.sh  extra_setup.sh  fedora36_setup_0.sh  fedora36_setup_2.sh  jlink.sh  notes.md  openocd.sh  rebuild_toolchain.sh  rust.sh  setup_1.sh  testing.md  ubuntu14_setup_0.sh  ubuntu14_setup_2.sh  ubuntu18_setup_0.sh  ubuntu18_setup_2.sh  ubuntu20_setup_0.sh
rusty_c/mydisk/: Cargo.toml  bindings.h  build.rs  fix.txt  out.txt
rusty_c/mydisk/.cargo/: config
rusty_c/mydisk/AsyncAPI/: async_tty.py  design.md  mod.rs
rusty_c/mydisk/c2rust/: c2rust-lib.rs
rusty_c/mydisk/src/: common.rs  diskfs.rs  lib.rs
rusty_c/mydisk/src/Async/: design.md
rusty_c/mydisk/src/Async/common/: mod.rs
rusty_c/mydisk/src/AsyncAPI/: design.md
rusty_c/mydisk/src/ClockCache/: clock.py  clock_test.py  mod.rs  second-chance.py
rusty_c/mydisk/src/FATdiskFS/: DictFS.py  mod.rs  test_output.txt
rusty_c/mydisk/src/SimpleFS/: mod.rs
rusty_c/mydisk/src/TreediskFS/: mod.rs
rusty_c/mydisk/src/TreediskFS_RS/: DictFS.py  clock.py  clock.rs  clock_test.py  mod.rs  test_output.txt
rusty_c/mydisk/src/async/: design.md
rusty_c/mydisk/src/common/: mod.rs
rusty_c/mydisk/src/tests/: integration_test.rs
rusty_c/pasts/: Cargo.toml
rusty_c/pasts/.cargo/: config
rusty_c/pasts/src/: main.rs
rusty_c/treedisk_bindgen/: Cargo.toml  build.rs
rusty_c/treedisk_bindgen/file/: log_shift_rs.h  super_file.c
rusty_c/treedisk_bindgen/src/: lib.rs  nostd_lib.rs  std_lib.rs
tools/: headers.h  mkfs.c  ramdisk.c  rust_test  rust_test.c  rust_test_fatdisk.c
(+62 files in other folders)
