[package]
name = "mydisk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
libm = "0.2.7"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.79"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"