[package]
name = "mydisk"
version = "0.1.0"
edition = "2021"

[lib]
name = "mydisk"
crate-type = ["staticlib"]

[dependencies]
cty = "0.2.2"
libm = "0.2.7"
linked_list_allocator = { version = "0.10.5", default-features = false }
spin = "0.9.8"

[build-dependencies]
bindgen = "0.65.1"
cbindgen = "0.24.0"
cc = "1.0.79"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
strip = true
opt-level = "z"
lto = true
codegen-units = 1