[package]
name = "rusty_fs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.2"
panic-halt = "0.2.0"

[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.79"

